--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "@tarojs/taro": "3.1.3",
     "@tarojs/react": "3.1.3",
     "react-dom": "^17.0.0",
-    "react": "^17.0.0"
+    "react": "^17.0.0",
+    "d3-scale": "^3.2.3",
+    "dayjs": "^1.10.4"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
     "@types/react": "^17.0.2",
+    "@types/d3-scale": "^3.2.2",
     "@tarojs/mini-runner": "3.1.3",
     "@babel/core": "^7.8.0",
     "@tarojs/webpack-runner": "3.1.3",
