--- a/package.json
+++ b/package.json
@@ -1,8 +1,30 @@
 {
   "name": "taro-calendar-heatmap",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "description": "A calendar heatmap component build by taro.",
+  "author": "<phillzou@gmail.com>",
+  "keywords": [
+    "taro",
+    "heatmap",
+    "calendar",
+    "小程序",
+    "日历"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Mayandev/taro-calendar-heatmap.git"
+  },
+  "homepage": "https://github.com/Mayandev/taro-calendar-heatmap",
+  "browser": "dist/index.umd.js",
+  "module": "dist/index.esm.js",
+  "main": "dist/index.js",
+  "source": "src/components/calendar-heat-map/index.tsx",
+  "types": "types/index.d.ts",
+  "files": [
+    "dist",
+    "types"
+  ],
   "templateInfo": {
     "name": "default",
     "typescript": true,
@@ -12,6 +34,9 @@
     "format": "prettier --write '**/*.{json,scss,ts,tsx,js}'",
     "pretty-quick": "pretty-quick --staged",
     "prepare": "husky install",
+    "build": "yarn run build:rollup && yarn run build:lib",
+    "build:lib": "tsc --project ./tsconfig.build.json --declaration --declarationDir types",
+    "build:rollup": "rollup --config ./rollup.config.js",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -36,7 +61,6 @@
     "Android >= 4.1",
     "ios >= 8"
   ],
-  "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.1.3",
@@ -49,24 +73,33 @@
     "dayjs": "^1.10.4"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^17.0.2",
-    "@types/d3-scale": "^3.2.2",
-    "@tarojs/mini-runner": "3.1.3",
     "@babel/core": "^7.8.0",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.0.1",
+    "@tarojs/mini-runner": "3.1.3",
     "@tarojs/webpack-runner": "3.1.3",
-    "babel-preset-taro": "3.1.3",
-    "eslint-config-taro": "3.1.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@types/d3-scale": "^3.2.2",
+    "@types/react": "^17.0.2",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "typescript": "^4.1.0",
+    "@typescript-eslint/parser": "^4.15.1",
+    "babel-preset-taro": "3.1.3",
+    "eslint": "^6.8.0",
+    "eslint-config-taro": "3.1.3",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.2.0",
     "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "rollup": "^2.23.1",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-scss": "^2.5.0",
+    "rollup-plugin-typescript2": "^0.27.2",
+    "rollup-plugin-visualizer": "^4.1.0",
+    "stylelint": "9.3.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.0"
   }
 }
