--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taro-calendar-heatmap",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A calendar heatmap component build by taro.",
   "author": "<phillzou@gmail.com>",
   "keywords": [
@@ -63,13 +63,13 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.1.3",
+    "@tarojs/react": "3.1.3",
     "@tarojs/runtime": "3.1.3",
     "@tarojs/taro": "3.1.3",
-    "@tarojs/react": "3.1.3",
-    "react-dom": "^17.0.0",
-    "react": "^17.0.0",
     "d3-scale": "^3.2.3",
-    "dayjs": "^1.10.4"
+    "dayjs": "^1.10.4",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -99,6 +99,7 @@
     "rollup-plugin-visualizer": "^4.1.0",
     "stylelint": "9.3.0",
     "tslib": "^2.1.0",
-    "typescript": "^4.1.0"
+    "typescript": "^4.1.0",
+    "d3-time": "^2.0.0"
   }
 }
