--- a/tsconfig.rollup.json
+++ b/tsconfig.rollup.json
@@ -17,7 +17,8 @@
     "module": "es6",
     "downlevelIteration": true,
     "baseUrl": ".",
-    "types": ["node"]
+    "types": ["node"],
+    "esModuleInterop": true
   },
   "compileOnSave": false,
   "exclude": ["node_modules/*", "dist/*"],
