--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taro-calendar-heatmap",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "A calendar heatmap component build by taro.",
   "author": "<phillzou@gmail.com>",
   "keywords": [
@@ -66,10 +66,12 @@
     "@tarojs/react": "3.1.3",
     "@tarojs/runtime": "3.1.3",
     "@tarojs/taro": "3.1.3",
+    "classnames": "^2.2.6",
     "d3-scale": "^3.2.3",
     "dayjs": "^1.10.4",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "lodash": "^4.17.21",
+    "react": "^16.10.0",
+    "react-dom": "^16.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -79,7 +81,7 @@
     "@tarojs/mini-runner": "3.1.3",
     "@tarojs/webpack-runner": "3.1.3",
     "@types/d3-scale": "^3.2.2",
-    "@types/react": "^17.0.2",
+    "@types/react": "^16.0.0",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
